--- a/PrimerProyecto/package.json
+++ b/PrimerProyecto/package.json
@@ -4,7 +4,7 @@
   "description": "Este es miprimer proyecto de JavaScrit con Node",
   "main": "index.js",
   "scripts": {
-    "verdad": "Hola, este es mi primer ejercicio con Node en el mejor Bootcamp de programación del mundo",
+    "start": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
